--- a/src/usr_06.tex
+++ b/src/usr_06.tex
@@ -36,7 +36,7 @@ If you want syntax highlighting only in the GUI version, put the "\verb!:syntax 
 
 There can be a number of reasons why you don't see colors:
 \begin{description}
-		% Find other lists like this. This is thw way to format this.
+		% Find other lists like this. This is the way to format this. TMC
 				\item [Your terminal does not support colors.]
 								Vim will use bold, italic and underlined text, but this doesn't look very nice.
 								You probably will want to try to get a terminal with colors.
