--- a/src/usr_30.tex
+++ b/src/usr_30.tex
@@ -102,7 +102,7 @@ To go back to the previous error, use:
 
 Other commands to move around in the error list:
 
-\begin{center} \begin{tabular}{c c}
+\begin{center} \begin{tabular}{l l}
 				\verb!:cfirst! & to first error \\
 				\verb!:clast! & to last error \\
 				\verb!:cc 3! & to error nr 3 \\
@@ -268,7 +268,7 @@ However, don't do this in files that have been carefully indented manually.
 The automatic indenting does a good job, but in some situations you might want to overrule it.
 \subsubsection{Setting indent style}
 Different people have different styles of indentation.
-By default Vim does a pretty good job of indenting in a way that 90% of programmers do.
+By default Vim does a pretty good job of indenting in a way that 90\% of programmers do.
 There are different styles, however; so if you want to, you can customize the indentation style with the \verb!'cinoptions'! option.
 
 By default \verb!'cinoptions'! is empty and Vim uses the default style.
