--- a/src/usr_03.tex
+++ b/src/usr_03.tex
@@ -342,7 +342,7 @@ If you want to use them in a search you must put a \textbackslash in front of th
 See below.
 
 To find the next occurrence of the same string use the "\verb!n!" command.
-Use this to find the first \verb!#include! after the cursor:%
+Use this to find the first \verb!#include! after the cursor:
 
  \begin{Verbatim}[samepage=true]
  /#include
