--- a/src/usr_31.tex
+++ b/src/usr_31.tex
@@ -37,7 +37,7 @@ Thus when you used "\verb!:browse split!" and selected a file in "\verb!/usr/loc
 
 This can be changed with the \verb!'browsedir'! option.  It can have one of three values:
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!last! & Use the last directory browsed (default) \\
 				\verb!buffer! & Use the same directory as the current buffer \\
 				\verb!current! & use the current directory \\
