--- a/src/usr_41.tex
+++ b/src/usr_41.tex
@@ -31,7 +31,7 @@ Let's start with a simple example:
 You only need to use them when you type a command.
 In a Vim script file they can be left out.
 We will use them here anyway to make clear these are colon commands and make them stand out from Normal mode commands.
-\emph{Note}: You can try out the examples by yanking the lines from the text here and executing them with :@"
+\emph{Note}: You can try out the examples by yanking the lines from the text here and executing them with \verb!:@"!
 
 The output of the example code is:
 
@@ -86,7 +86,7 @@ The example was given to explain the commands, but would you really want to make
  :endfor
 \end{Verbatim}
 
-We won't explain how |:for| and |\verb!:h range()!| work until later.
+We won't explain how |\verb!:h :for!| and |\verb!:h range()!| work until later.
 Follow the links if you are impatient.
 
 \subsubsection{Three kinds of numbers}
@@ -102,7 +102,7 @@ Example:
 
 \begin{Verbatim}[samepage=true]
  :echo 0x7f 036
-    127 30
+ 127 30
 \end{Verbatim}
 
 A number is made negative with a minus sign.
@@ -112,7 +112,7 @@ Compare this with the previous example:
 
 \begin{Verbatim}[samepage=true]
  :echo 0x7f -036
-    97
+ 97
 \end{Verbatim}
 
 White space in an expression is ignored.
@@ -165,7 +165,7 @@ More about script-local variables here: |\verb!:h script-variable!|.
 There are more kinds of variables, see |\verb!:h internal-variables!|.
 The most often used ones are:
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!b:name! & variable local to a buffer \\
 				\verb!w:name! & variable local to a window \\
 				\verb!g:name! & global variable (also in a function) \\
@@ -269,7 +269,7 @@ A backslash is taken literally, thus you can't use it to change the meaning of t
 In double-quote strings it is possible to use special characters.
 Here are a few useful ones:
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!\t! & <Tab> \\
 				\verb!\n! & <NL>, line break \\
 				\verb!\r! & <CR>, <Enter> \\
@@ -294,7 +294,7 @@ The numbers, strings and variables mentioned above are expressions by themselves
 Thus everywhere an expression is expected, you can use a number, string or variable.
 Other basic items in an expression are:
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!$NAME! & environment variable \\
 				\verb!&name! & option \\
 				\verb!@r! & register \\
@@ -320,13 +320,13 @@ Example:
 
 This makes sure the "The Start" pattern is used with the \verb!'ignorecase'! option off.
 Still, it keeps the value that the user had set.
-(Another way to do this would be to add "\verb!\C!" to the pattern, see |/\textbackslash C|.)
+(Another way to do this would be to add "\verb!\C!" to the pattern, see |\verb!:h /\C!|.)
 
 \subsubsection{Mathematics}
 It becomes more interesting if we combine these basic items.
 Let's start with mathematics on numbers:
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!a + b! & add \\
 				\verb!a - b! & subtract \\
 				\verb!a * b! & multiply \\
@@ -509,7 +509,7 @@ For the full table see |\verb!:h expr-==!|.
 The "\verb!:while!" command was already mentioned.
 Two more statements can be used in between the "\verb!:while!" and the "\verb!:endwhile!":
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!:continue! & Jump back to the start of the while loop; the loop continues. \\
 				\verb!:break! & Jump forward to the "\verb!:endwhile!"; the loop is discontinued. \\
 \end{tabular} \end{center}
@@ -655,13 +655,13 @@ Use CTRL-] on the function name to jump to detailed help on it.
 String manipulation:
 \phantomsection
 \label{string-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!nr2char()! & get a character by its ASCII value \\
 				\verb!char2nr()! & get ASCII value of a character \\
 				\verb!str2nr()! & convert a string to a Number \\
 				\verb!str2float()! & convert a string to a Float \\
 				\verb!printf()! & format a string according to \verb!%! items \\
-				\verb!escape()! & escape characters in a string with a '\verb!\!' \\
+				\verb!escape()! & escape characters in a string with a `\verb!\!' \\
 				\verb!shellescape()! & escape a string for use with a shell command \\
 				\verb!fnameescape()! & escape a file name for use with a Vim command \\
 				\verb!tr()! & translate characters from one set to another \\
@@ -688,7 +688,7 @@ String manipulation:
 List manipulation:
 \phantomsection
 \label{list-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!get()! & get an item without error for wrong index \\
 				\verb!len()! & number of items in a List \\
 				\verb!empty()! & check if List is empty \\
@@ -717,7 +717,7 @@ List manipulation:
 Dictionary manipulation:
 \phantomsection
 \label{dict-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!get()! & get an entry without an error for a wrong key \\
 				\verb!len()! & number of entries in a Dictionary \\
 				\verb!has_key()! & check whether a key appears in a Dictionary \\
@@ -740,7 +740,7 @@ Dictionary manipulation:
 Floating point computation:
 \phantomsection
 \label{float-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!float2nr()! & convert Float to Number \\
 				\verb!abs()! & absolute value (also works for Number) \\
 				\verb!round()! & round off \\
@@ -765,7 +765,7 @@ Floating point computation:
 Variables:
 \phantomsection
 \label{var-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!type()! & type of a variable \\
 				\verb!islocked()! & check if a variable is locked \\
 				\verb!function()! & get a Funcref for a function name \\
@@ -784,7 +784,7 @@ Cursor and mark position:
 \phantomsection
 \label{cursor-functions}
 \label{mark-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!col()! & column number of the cursor or a mark \\
 				\verb!virtcol()! & screen column of the cursor or a mark \\
 				\verb!line()! & line number of the cursor or mark \\
@@ -801,7 +801,7 @@ Cursor and mark position:
 Working with text in the current buffer:
 \phantomsection
 \label{text-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!getline()! & get a line or list of lines from the buffer \\
 				\verb!setline()! & replace a line in the buffer \\
 				\verb!append()! & append line or list of lines in the buffer \\
@@ -821,7 +821,7 @@ System functions and manipulation of files:
 \phantomsection
 \label{system-functions}
 \label{file-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!glob()! & expand wildcards \\
 				\verb!globpath()! & expand wildcards in a number of directories \\
 				\verb!findfile()! & find a file in a list of directories \\
@@ -853,7 +853,7 @@ Date and Time:
 \phantomsection
 \label{date-functions}
 \label{time-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!getftime()! & get last modification time of a file \\
 				\verb!localtime()! & get current time in seconds \\
 				\verb!strftime()! & convert time to a string \\
@@ -866,7 +866,7 @@ Buffers, windows and the argument list:
 \label{buffer-functions}
 \label{window-functions}
 \label{arg-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!argc()! & number of entries in the argument list \\
 				\verb!argidx()! & current position in the argument list \\
 				\verb!argv()! & get one entry from the argument list \\
@@ -887,7 +887,7 @@ Buffers, windows and the argument list:
 Command line:
 \phantomsection
 \label{command-line-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!getcmdline()! & get the current command line \\
 				\verb!getcmdpos()! & get position of the cursor in the command line \\
 				\verb!setcmdpos()! & set position of the cursor in the command line \\
@@ -897,7 +897,7 @@ Command line:
 Quickfix and location lists:
 \phantomsection
 \label{quickfix-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!getqflist()! & list of quickfix errors \\
 				\verb!setqflist()! & modify a quickfix list \\
 				\verb!getloclist()! & list of location list items \\
@@ -907,7 +907,7 @@ Quickfix and location lists:
 Insert mode completion:
 \phantomsection
 \label{completion-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!complete()! & set found matches \\
 				\verb!complete_add()! & add to found matches \\
 				\verb!complete_check()! & check if completion should be aborted \\
@@ -917,7 +917,7 @@ Insert mode completion:
 Folding:
 \phantomsection
 \label{folding-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!foldclosed()! & check for a closed fold at a specific line \\
 				\verb!foldclosedend()! & like foldclosed() but return the last line \\
 				\verb!foldlevel()! & check for the fold level at a specific line \\
@@ -929,9 +929,9 @@ Syntax and highlighting:
 \phantomsection
 \label{syntax-functions}
 \label{highlighting-functions}
-\begin{center} \begin{tabular}{c l}
-				\verb!clearmatches()! & clear all matches defined by |matchadd()| and the |\verb!:h :match!| commands \\
-				\verb!getmatches()! & get all matches defined by |matchadd()| and the |\verb!:h :match!| commands \\
+\begin{center} \begin{tabular}{l l}
+				\verb!clearmatches()! & clear all matches defined by |\verb!:h matchadd()!| and the |\verb!:h :match!| commands \\
+				\verb!getmatches()! & get all matches defined by |\verb!:h matchadd()!| and the |\verb!:h :match!| commands \\
 				\verb!hlexists()! & check if a highlight group exists \\
 				\verb!hlID()! & get ID of a highlight group \\
 				\verb!synID()! & get syntax ID at a specific position \\
@@ -942,14 +942,14 @@ Syntax and highlighting:
 				\verb!diff_hlID()! & get highlight ID for diff mode at a position \\
 				\verb!matchadd()! & define a pattern to highlight (a "match") \\
 				\verb!matcharg()! & get info about |\verb!:h :match!| arguments \\
-				\verb!matchdelete()! & delete a match defined by |matchadd()| or a |\verb!:h :match!| command \\
+				\verb!matchdelete()! & delete a match defined by |\verb!:h matchadd()!| or a |\verb!:h :match!| command \\
 				\verb!setmatches()! & restore a list of matches saved by |\verb!:h getmatches()!| \\
 \end{tabular} \end{center}
 
 Spelling:
 \phantomsection
 \label{spell-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!spellbadword()! & locate badly spelled word at or after cursor \\
 				\verb!spellsuggest()! & return suggested spelling corrections \\
 				\verb!soundfold()! & return the sound-a-like equivalent of a word \\
@@ -958,7 +958,7 @@ Spelling:
 History:
 \phantomsection
 \label{history-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!histadd()! & add an item to a history \\
 				\verb!histdel()! & delete an item from a history \\
 				\verb!histget()! & get an item from a history \\
@@ -968,7 +968,7 @@ History:
 Interactive:
 \phantomsection
 \label{interactive-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!browse()! & put up a file requester \\
 				\verb!browsedir()! & put up a directory requester \\
 				\verb!confirm()! & let the user make a choice \\
@@ -986,7 +986,7 @@ Interactive:
 GUI:
 \phantomsection
 \label{gui-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!getfontname()! & get name of current font being used \\
 				\verb!getwinposx()! & X position of the GUI Vim window \\
 				\verb!getwinposy()! & Y position of the GUI Vim window \\
@@ -995,7 +995,7 @@ GUI:
 Vim server:
 \phantomsection
 \label{server-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!serverlist()! & return the list of server names \\
 				\verb!remote_send()! & send command characters to a Vim server \\
 				\verb!remote_expr()! & evaluate an expression in a Vim server \\
@@ -1009,7 +1009,7 @@ Vim server:
 Window size and position:
 \phantomsection
 \label{window-size-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!winheight()! & get height of a specific window \\
 				\verb!winwidth()! & get width of a specific window \\
 				\verb!winrestcmd()! & return command to restore window sizes \\
@@ -1020,7 +1020,7 @@ Window size and position:
 Various:
 \phantomsection
 \label{various-functions}
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!mode()! & get current editing mode \\
 				\verb!visualmode()! & last visual mode used \\
 				\verb!hasmapto()! & check if a mapping exists \\
@@ -1532,7 +1532,7 @@ Is equivalent to:
 
 The \verb!get()! function checks if a key is present in a Dictionary.
 If it is, then the value is retrieved.
-If it isn't, then the default value is returned, in the example it's '\verb!???!'.
+If it isn't, then the default value is returned, in the example it's `\verb!???!'.
 This is a convenient way to handle situations where a key may not be present and you don't want an error message.
 
 The \verb!join()! function does the opposite of \verb!split()!: it joins together a list of words, putting a space in between.
@@ -1552,7 +1552,7 @@ Let's first make an object (aka Dictionary) that has the translate function, but
  :endfunction
 \end{Verbatim}
 
-It's slightly different from the function above, using '\verb!self.words!' to lookup word translations.
+It's slightly different from the function above, using `\verb!self.words!' to lookup word translations.
 But we don't have a self.words.
 Thus you could call this an abstract class.
 
@@ -1591,7 +1591,7 @@ Now you can go one step further, and use your preferred translator:
 
 Here "\verb!trans!" refers to one of the two objects (Dictionaries).
 No copy is made.
-More about List and Dictionary identity can be found at |list-identity| and |\verb!:h dict-identity!|.
+More about List and Dictionary identity can be found at |\verb!:h list-identity!| and |\verb!:h dict-identity!|.
 
 Now you might use a language that isn't supported.
 You can overrule the \verb!translate()! function to do nothing:
@@ -1620,7 +1620,7 @@ Now use "\verb!uk2uk!" when no recognized language is found:
     one two three
 \end{Verbatim}
 
-For further reading see |Lists| and |\verb!:h Dictionaries!|.
+For further reading see |\verb!:h Lists!| and |\verb!:h Dictionaries!|.
 \subsection{Exceptions}
 Let's start with an example:
 
@@ -1736,10 +1736,10 @@ Examples:
  :!ls *.c            " list C files
 \end{Verbatim}
 
-The abbreviation \verb!'dev'! will be expanded to '\verb!development     " shorthand!'.
-The mapping of <F3> will actually be the whole line after the '\verb!o# ....!' including the '\verb!" insert include!'.
+The abbreviation \verb!'dev'! will be expanded to `\verb!development     " shorthand!'.
+The mapping of <F3> will actually be the whole line after the `\verb!o# ....!' including the `\verb!" insert include!'.
 The "\verb!execute!" command will give an error.
-The "\verb:!:" command will send everything after it to the shell, causing an error for an unmatched '\verb!"!' character.
+The "\verb:!:" command will send everything after it to the shell, causing an error for an unmatched `\verb!"!' character.
 
 There can be no comment after "\verb!:map!", "\verb!:abbreviate!", "\verb!:execute!" and "\verb:!:" commands (there are a few more commands with this restriction).
 For the "\verb!:map!", "\verb!:abbreviate!" and "\verb!:execute!" commands there is a trick:
@@ -1750,16 +1750,16 @@ For the "\verb!:map!", "\verb!:abbreviate!" and "\verb!:execute!" commands there
  :execute cmd            |" do it
 \end{Verbatim}
 
-With the '\verb!|!' character the command is separated from the next one.
+With the `\verb!|!' character the command is separated from the next one.
 And that next command is only a comment.
-For the last command you need to do two things: |\verb!:h \verb!:execute!!| and use '\verb!|!':
+For the last command you need to do two things: |\verb!:h :execute!| and use `\verb!|!':
 
 \begin{Verbatim}[samepage=true]
  :exe '!ls *.c'          |" list C files
 \end{Verbatim}
 
-Notice that there is no white space before the '\verb!|!' in the abbreviation and mapping.
-For these commands, any character until the end-of-line or '\verb!|!' is included.
+Notice that there is no white space before the `\verb!|!' in the abbreviation and mapping.
+For these commands, any character until the end-of-line or `\verb!|!' is included.
 As a consequence of this behavior, you don't always see that trailing whitespace is included:
 
 \begin{Verbatim}[samepage=true]
@@ -1777,7 +1777,7 @@ For Unix there is one special way to comment a line, that allows making a Vim sc
 \end{Verbatim}
 
 The "\verb!#!" command by itself lists a line with the line number.
-Adding an exclamation mark changes it into doing nothing, so that you can add the shell command to execute the rest of the file. |:\verb0#!0| |\verb!:h \verb!-S!!|
+Adding an exclamation mark changes it into doing nothing, so that you can add the shell command to execute the rest of the file. |\verb_:h :#!_| |\verb!:h -S!|
 
 \subsubsection{Pitfalls}
 Even bigger problem arises in the following example:
@@ -1791,14 +1791,14 @@ Here the unmap command will not work, because it tries to unmap "\verb!,ab !".
 This does not exist as a mapped sequence.
 An error will be issued, which is very hard to identify, because the ending whitespace character in "\verb!:unmap ,ab !" is not visible.
 
-And this is the same as what happens when one uses a comment after an '\verb!unmap!' command:
+And this is the same as what happens when one uses a comment after an `\verb!unmap!' command:
 
 \begin{Verbatim}[samepage=true]
  :unmap ,ab     " comment
 \end{Verbatim}
 
 Here the comment part will be ignored.
-However, Vim will try to unmap '\verb!,ab     '!', which does not exist.
+However, Vim will try to unmap `\verb!,ab     !', which does not exist.
 Rewrite it as:
 
 \begin{Verbatim}[samepage=true]
@@ -1817,7 +1817,7 @@ This example yanks the current line, puts it above the first line in the file an
 
 What this does:\\
 \verb!ma"aYHmbgg"aP`bzt`a!
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{c l} % Leave this one TMC
 \verb!ma                 ! & set mark a at cursor position \\
 \verb!  "aY              ! & yank current line into register a \\
 \verb!     Hmb           ! & go to top line in window and set mark b there \\
@@ -2233,7 +2233,7 @@ You can add more tags inside \verb!**! in your help file.
 But be careful not to use existing help tags.
 You would probably use the name of your plugin in most of them, like "\verb!typecorr-settings!" in the example.
 
-Using references to other parts of the help in \verb!|\verb!:h !|! is recommended.
+Using references to other parts of the help in \verb!||! is recommended.
 This makes it easy for the user to find associated help.
 \subsubsection{Filetype detection}
 \label{plugin-filetype}
@@ -2255,7 +2255,7 @@ Also see |\verb!:h new-filetype!|.
 \label{plugin-special}
 
 Summary of special things to use in a plugin:
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!s:name! & Variables local to the script. \\
 				\verb!<SID>! & Script-ID, used for mappings and functions local to the script. \\
 				\verb!hasmapto()! & Function to test if the user already defined a mapping for functionality the script offers. \\
@@ -2370,7 +2370,7 @@ Here is an example of how this is done for a plugin for the mail filetype:
 \end{Verbatim}
 
 Two global variables are used:
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabular}{l l}
 				\verb!no_plugin_maps! & disables mappings for all filetype plugins \\
 				\verb!no_mail_maps! & disables mappings for a specific filetype \\
 \end{tabular} \end{center}
@@ -2404,7 +2404,7 @@ This construct makes sure the function is only defined once:
 \subsubsection{Undo}
 \label{undo_ftplugin}
 
-When the user does ":setfiletype xyz" the effect of the previous filetype should be undone.
+When the user does "\verb!:setfiletype xyz!" the effect of the previous filetype should be undone.
 Set the \verb!b:undo_ftplugin! variable to the commands that will undo the settings in your filetype plugin.
 Example:
 
@@ -2434,14 +2434,14 @@ Use one of these three forms:
 \label{ftplugin-special}
 Summary of special things to use in a filetype plugin:
 
-\begin{center} \begin{tabular}{c l}
+\begin{center} \begin{tabularx}{l X} % Right column went off the page TMC
 				\verb!<LocalLeader>! & Value of "\verb!maplocalleader!", which the user defines as the keys that filetype plugin mappings start with. \\
 				\verb!:map <buffer>! & Define a mapping local to the buffer. \\
 				\verb!:noremap <script>! & Only remap mappings defined in this script that start with <SID>. \\
 				\verb!:setlocal! & Set an option for the current buffer only. \\
 				\verb!:command -buffer! & Define a user command local to the buffer. \\
 				\verb!exists("*s:Func")! & Check if a function was already defined. \\
-\end{tabular} \end{center}
+\end{tabularx} \end{center}
 
 Also see \hyperref[plugin-special]{|\texttt{plugin-special}|}, the special things used for all plugins.
 \subsection{Writing a compiler plugin}
@@ -2473,7 +2473,7 @@ The default files start with:
 When you write a compiler file and put it in your personal runtime directory (e.g., \verb!~/.vim/compiler! for Unix), you set the "\verb!current_compiler!" variable to make the default file skip the settings.
 \phantomsection
 \label{:CompilerSet}
-The second mechanism is to use "\verb!:set!" for "\verb!:compiler!!" and "\verb!:setlocal!" for "\verb!:compiler!".
+The second mechanism is to use "\verb!:set!" for "\verb_:compiler!_" and "\verb!:setlocal!" for "\verb!:compiler!".
 Vim defines the "\verb!:CompilerSet!" user command for this.
 However, older Vim versions don't, thus your plugin should define it then.
 This is an example:
@@ -2506,7 +2506,7 @@ It may sound surprising that quickload means loading a script twice.
 What we mean is that it loads quickly the first time, postponing the bulk of the script to the second time, which only happens when you actually use it.
 When you always use the functionality it actually gets slower!
 
-\emph{Note} that since Vim 7 there is an alternative: use the |\verb! :h autoload!| functionality |\hyperref[Writing library scripts]{\texttt{Writing library scripts}}|.
+\emph{Note} that since Vim 7 there is an alternative: use the |\verb!:h autoload!| functionality |\hyperref[Writing library scripts]{\texttt{Writing library scripts}}|.
 
 The following example shows how it's done:
 
@@ -2592,7 +2592,7 @@ Vim will recognize the function name and when it's not defined search for the sc
 That script must define the "\verb!mylib#myfunction()!" function.
 
 You can put many other functions in the mylib.vim script, you are free to organize your functions in library scripts.
-But you must use function names where the part before the '\verb!#!' matches the script name.
+But you must use function names where the part before the `\verb!#!' matches the script name.
 Otherwise Vim would not know what script to load.
 
 If you get really enthusiastic and write lots of library scripts, you may want to use subdirectories.
@@ -2617,7 +2617,7 @@ Where the function is defined like this:
 \end{Verbatim}
 
 Notice that the name the function is defined with is exactly the same as the name used for calling the function.
-And the part before the last '\verb!#!' exactly matches the subdirectory and script name.
+And the part before the last `\verb!#!' exactly matches the subdirectory and script name.
 
 You can use the same mechanism for variables:
 
